Melhor compatibilidade com Edge e Firefox.

--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
     <p><strong>Idade:</strong> 24 anos</p>
     <p><strong>E-mail:</strong> gabriel.lovetro@gmail.com</p>
     <p><strong>CPF:</strong> XXX.XXX.XXX-XX</p>
-    <p><strong>Endereço:</strong> Rua XXXX, XXX. Jardim XXXXX. Londrina - PR.</p>
+    <p><strong>Endere&#231;o:</strong> Rua XXXX, XXX. Jardim XXXXX. Londrina - PR.</p>
     <p><strong>Telefone:</strong> (43) 99981-2717</p>
   </div>
 
-  <h2 class="title">Experiência Profissional</h2>
+  <h2 class="title">Experi&#234;ncia Profissional</h2>
   <div class="section" id="experience-container">
     <p id="experience-loading"><strong>CARREGANDO...</strong></p>
   </div>
 
-  <h2 class="title">Formação Acadêmica</h2>
+  <h2 class="title">Forma&#231;&#227;o Acad&#234;mica</h2>
   <div class="section">
     <div>
-        <h3 class="company-title">Universidade Tecnológica Federal do Paraná</h3>
-        <p><strong>Duração:</strong> 03/2012 até 12/2017</p>
-        <p><strong>Curso:</strong> Bacharelado em Engenharia de Computação</p>
+        <h3 class="company-title">Universidade Tecnol&#243;gica Federal do Paran&#225;</h3>
+        <p><strong>Dura&#231;&#227;o:</strong> 03/2012 at&#233; 12/2017</p>
+        <p><strong>Curso:</strong> Bacharelado em Engenharia de Computa&#231;&#227;o</p>
         <p><strong>Disciplinas:</strong></p>
-        <li>Estrutura de Dados, Programação Orientada a Objetos, Processamento de Imagens</li>
+        <li>Estrutura de Dados, Programa&#231;&#227;o Orientada a Objetos, Processamento de Imagens</li>
     </div>
     
     <div>
         <h3 class="company-title">The George Washington University</h3>
-        <p><strong>Duração:</strong> 08/2015 até 05/2016</p>
-        <p><strong>Curso:</strong> Engenharia de Computação - Estudante Internacional</p>
+        <p><strong>Dura&#231;&#227;o:</strong> 08/2015 at&#233; 05/2016</p>
+        <p><strong>Curso:</strong> Engenharia de Computa&#231;&#227;o - Estudante Internacional</p>
         <p><strong>Disciplinas:</strong></p>
-        <li>Introdução à Programação Web, Organização Computacional, Sistemas UNIX</li>
-        <p><strong>Programa:</strong> Graduação sanduíche com bolsa do Ciência sem Fronteiras</p>
+        <li>Introdu&#231;&#227;o &#224; Programa&#231;&#227;o Web, Organiza&#231;&#227;o Computacional, Sistemas UNIX</li>
+        <p><strong>Programa:</strong> Gradua&#231;&#227;o sandu&#237;che com bolsa do Ci&#234;ncia sem Fronteiras</p>
     </div>
   </div>
 
@@ -47,13 +47,13 @@
   </div>
 
   <h2 class="title">Idiomas</h2>
-  <p><strong>Português:</strong> Nativo</p>
-  <p><strong>Inglês:</strong> Fluente</p>
-  <p><strong>Espanhol:</strong> Básico</p>
+  <p><strong>Portugu&#234;s:</strong> Nativo</p>
+  <p><strong>Ingl&#234;s:</strong> Fluente</p>
+  <p><strong>Espanhol:</strong> B&#225;sico</p>
 
   <h2 class="title">Interesses Profissionais</h2>
-  <p>Aprender novas tecnologias e ferramentas é sempre uma experiência enriquecedora. Poder ajudar os outros com esse conhecimento também é muito recompensador.</p>
-  <p>Com o conhecimento obtido pela cooperação e aprendizado, é possível desenvolver inovações que facilitam (ou simplesmente ajudam) a vida das pessoas. Saber que o produto que ajudou a desenvolver está sendo utilizado (e apreciado) é muito legal!</p>
+  <p>Aprender novas tecnologias e ferramentas &#233; sempre uma experi&#234;ncia enriquecedora. Poder ajudar os outros com esse conhecimento tamb&#233;m &#233; muito recompensador.</p>
+  <p>Com o conhecimento obtido pela coopera&#231;&#227;o e aprendizado, &#233; poss&#237;vel desenvolver inova&#231;&#245;es que facilitam (ou simplesmente ajudam) a vida das pessoas. Saber que o produto que ajudou a desenvolver est&#225; sendo utilizado (e apreciado) &#233; muito legal!</p>
 </div>
 
 <script src="logic.js"></script>
